added error method handler
